@@ -58,6 +58,7 @@ import javafx.util.Duration;
 import java.io.File;
 import java.io.IOException;
 import java.net.URL;
+import java.net.URLDecoder;
 import java.rmi.NotBoundException;
 import java.rmi.RemoteException;
 import java.rmi.registry.Registry;
@@ -146,7 +147,9 @@ public class ChatController implements Initializable {
     @FXML
     private ButtonBar secondButtonBar;
 
-    private UserSessionDto userSessionDto;
+    @FXML
+    private ImageView userImage;
+
 
     ObservableList<Pane> paneObservableList = FXCollections.observableArrayList();
     ObservableList<Pane> notificationObservableList = FXCollections.observableArrayList();
@@ -154,6 +157,7 @@ public class ChatController implements Initializable {
     ObservableList<Pane> contactsObservableList = FXCollections.observableArrayList();
     ObservableList<Pane> invitationsObservableList = FXCollections.observableArrayList();
     ObservableList<Pane> chatsObservableList = FXCollections.observableArrayList();
+
 
     int notificationCount = 0;
     Long currentChat = null;
@@ -166,30 +170,21 @@ public class ChatController implements Initializable {
         closeChatBtn.fire();
 
         resetMessageOptions();
-        if (PasswordLoginController.userSessionDto != null)
-            userSessionDto = PasswordLoginController.userSessionDto;
-        else
-            userSessionDto = RegisterController.userSessionDto;
-        attachBtn.setOnAction(ev->{
-            FileChooser fileChooser = new FileChooser();
-            File file = fileChooser.showOpenDialog(null);
 
-            try {
-                if (file != null) {
-                    new FileTransferService().sendFile(1,"01111315033",file);
-                }
-            } catch (RemoteException e) {
-                e.printStackTrace();
-            }catch (IOException e) {
-                e.printStackTrace();
-            }
-        });
+        try {
+            ContactDto contact = ContactList.getList().stream().filter(x->x.getId().equals(MyID.getInstance().getMyId())).toList().get(0);
+            userImage.setImage(new Image(saveUserImage(contact),200,200,false,true));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
         chatsButton.fire();
         selectChat();
         checkInvitations();
         checkNotifications();
         checkContacts();
         checkNewSentMessages();
+        selectInvitation();
     }
 
     private void resetMessageOptions() {
@@ -209,7 +204,7 @@ public class ChatController implements Initializable {
     private void checkNewSentMessages() {
         MessagesQueue.getList().addListener(new MapChangeListener<Long, List<MessageDto>>() {
             @Override
-            public void onChanged(Change<? extends Long, ? extends List<MessageDto>> change) {
+            public void onChanged(Change<? extends Long, ? extends List<MessageDto>> changes) {
                 if (currentPane.getText().equals("Chats")) {
                     Platform.runLater(new Runnable() {
                         @Override
@@ -220,6 +215,7 @@ public class ChatController implements Initializable {
                     });
                 }
                 if (currentChat != null && currentChat.equals(MessagesQueue.change.keySet().toArray()[0])) {
+                    System.out.println(MessagesQueue.change.keySet());
                     if (MessagesQueue.change.get(MessagesQueue.change.keySet().toArray()[0]).getSenderId().equals(MyID.getInstance().getMyId())) {
                         Platform.runLater(() -> {
                             createMessage(MessagesQueue.change.get(MessagesQueue.change.keySet().toArray()[0]), 1);
@@ -227,10 +223,16 @@ public class ChatController implements Initializable {
                     } else {
                         createMessage(MessagesQueue.change.get(MessagesQueue.change.keySet().toArray()[0]), 2);
                     }
-                } else if (!currentPane.getText().equals("Notifications")) {
+                } else if ((currentChat == null && !currentPane.getText().equals("Notifications")) || (currentChat != null && !currentPane.getText().equals("Notifications")
+                        && !currentChat.equals(MessagesQueue.change.keySet().toArray()[0])
+                        && !MyID.getInstance().getMyId().equals(MessagesQueue.change.get(MessagesQueue.change.keySet().toArray()[0]).getSenderId()))) {
+//                    System.out.println("MessagesQueue.change.keySet().toArray()[0]).getSenderId()" + MessagesQueue.change.keySet().toArray()[0]);
                     notificationCountLabel.setText(++notificationCount + "");
                     notificationCountCircle.setVisible(true);
                     notificationCountLabel.setVisible(true);
+                    createNotificationList((Long) MessagesQueue.change.keySet().toArray()[0], MessagesQueue.change.get(MessagesQueue.change.keySet().toArray()[0]).getTimestamp(), MessagesQueue.change.get(MessagesQueue.change.keySet().toArray()[0]).getSenderId());
+                } else {
+                    createNotificationList((Long) MessagesQueue.change.keySet().toArray()[0], MessagesQueue.change.get(MessagesQueue.change.keySet().toArray()[0]).getTimestamp(), MessagesQueue.change.get(MessagesQueue.change.keySet().toArray()[0]).getSenderId());
                 }
             }
         });
@@ -273,11 +275,12 @@ public class ChatController implements Initializable {
         NotificationQueue.getList().addListener(new ListChangeListener<NotificationDto>() {
             @Override
             public void onChanged(Change<? extends NotificationDto> change) {
+
                 if (currentPane.getText().equals("Notifications")) {
                     Platform.runLater(new Runnable() {
                         @Override
                         public void run() {
-                            createNotificationList();
+                            leftList.setItems(notificationObservableList);
                         }
 
                     });
@@ -326,38 +329,67 @@ public class ChatController implements Initializable {
                             rightAnchorPane.getChildren().remove(rightAnchorPane.getChildren().size() - 1);
                             isChatClosed = false;
                         }
-                    }
-                    if (currentPane.getText().equals("Contacts")) {
-                        for (ChatDto chat : ChatList.getList()) {
-                            if (chat.getMembersIds().size() == 2 && (chat.getMembersIds().get(0).equals(((Label) (newValue.lookup("#userPhoneNumber"))).getText()) || chat.getMembersIds().get(1).equals(((Label) (newValue.lookup("#userPhoneNumber"))).getText()))) {
-                                currentChat = chat.getId();
+
+                        if (currentPane.getText().equals("Contacts")) {
+                            for (ChatDto chat : ChatList.getList()) {
+                                if (chat.getMembersIds().size() == 2 && (chat.getMembersIds().get(0).equals(((Label) (newValue.lookup("#userPhoneNumber"))).getText()) || chat.getMembersIds().get(1).equals(((Label) (newValue.lookup("#userPhoneNumber"))).getText()))) {
+                                    currentChat = chat.getId();
+                                }
                             }
+
+                        } else if (currentPane.getText().equals("Chats")) {
+                            currentChat = Long.parseLong(((Label) (newValue.lookup("#chatID"))).getText());
+                        }
+                        chatName.setText(((Label) (newValue.lookup("#userName"))).getText());
+                        System.out.println(((Circle)(newValue.getChildren().get(1))));
+//                        chatIcon.setFill(new ImagePattern(newValue.));
+
+                        try {
+                            chatIcon.setFill(new ImagePattern(new Image(saveUserImage(getUserPic()),230, 27, false, true)));
+
+                        } catch (IOException e) {
+                            e.printStackTrace();
                         }
 
-                    } else if (currentPane.getText().equals("Chats")) {
-                        currentChat = Long.parseLong(((Label) (newValue.lookup("#chatID"))).getText());
-                    }
-                    chatName.setText(((Label) (newValue.lookup("#userName"))).getText());
-//                          chatIcon.setFill(new ImagePattern(new Image(Constants.byteArrayToImage(arr, img).getPath(),100,100,false,true)));
-
-                    if (MessagesQueue.getList().containsKey(currentChat)) {
-                        for (MessageDto message : MessagesQueue.getList().get(currentChat)) {
-                            if (message.getSenderId().equals(userSessionDto.getUser().getId())) {
-                                createMessage(message, 1);
-                            } else {
-                                createMessage(message, 2);
+                        if (MessagesQueue.getList().containsKey(currentChat)) {
+                            for (MessageDto message : MessagesQueue.getList().get(currentChat)) {
+                                if (message.getSenderId().equals(MyID.getInstance().getMyId())) {
+                                    createMessage(message, 1);
+                                } else {
+                                    createMessage(message, 2);
+                                }
                             }
                         }
                     }
+
                 }
-
             }
         });
     }
 
+    private ContactDto getUserPic(){
+        ContactDto con = new ContactDto();
+
+        for(ChatDto dto : ChatList.getList()){
+            if(!dto.getMembersIds().get(0).equals(MyID.getInstance().getMyId())){
+                ContactDto contact = ContactList.getList().stream().filter(c -> c.getId().equals(dto.getMembersIds().get(0))).toList().get(0);
+                con.setImage(contact.getImage());
+                con.setImgPath(contact.getImgPath());
+            }
+            else {
+                ContactDto contact = ContactList.getList().stream().filter(c -> c.getId().equals(dto.getMembersIds().get(1))).toList().get(0);
+                con.setImage(contact.getImage());
+                con.setImgPath(contact.getImgPath());
+
+            }
+        }
+       return con;
+    }
+
+
+
     @FXML
     private void openChats(ActionEvent actionEvent) {
-//        NotificationQueue.getList().add(i, new NotificationDto(i++, 012, 011, "add", new Date(40000), "add me", false));
         searchField.setVisible(true);
         contactsButton.setStyle(null);
         invitationsButton.setStyle(null);
@@ -373,12 +405,11 @@ public class ChatController implements Initializable {
         chatsObservableList.clear();
         leftList.setItems(chatsObservableList);
         MessagesQueue.getList().forEach((k, v) -> {
-            if(k != -1) {
+            if (k != -1) {
                 Pane temp = PaneManager.getPaneManager().putRecentChatCard();
                 ((Label) (temp.lookup("#chatID"))).setText(k.toString());
-//            putImageOnPane(chat.getPicture_icon(), temp);
-//            putStatusOnPane(ContactList.getList().stream().filter(c-> c.getPhoneNumber() == v.get(v.size()-1).getSenderId()).collect(Collectors.toList()).get(0).getIsOnlineStatus(), temp);
-//            putUserNameOnPane(ContactList.getList().stream().filter(c-> c.getPhoneNumber() == v.get(v.size()-1).getSenderId()).collect(Collectors.toList()).get(0).getName(), temp);
+                putImageOnPane(getUserPic(), temp);
+                putStatusOnPane(ContactList.getList().stream().filter(c -> c.getId().equals( v.get(v.size() - 1).getSenderId())).toList().get(0).getIsOnlineStatus(), temp);
                 putMessageOnPane(v.get(v.size() - 1).getMessage(), temp);
                 putTimeOnPane(v.get(v.size() - 1).getTimestamp(), temp);
                 putUserNameOnPane(v.get(v.size() - 1).getSenderId(), temp);
@@ -386,14 +417,12 @@ public class ChatController implements Initializable {
             }
         });
 
-//        chatsObservableList.stream().sorted((p, n) -> Integer.parseInt(((Label) (p.lookup("#timestamp"))).getText()));
+
     }
 
-    int x = 0;
 
     @FXML
     private void openContacts(ActionEvent actionEvent) {
-//        InvitationQueue.getList().add(new InvitationDto(x++, "012", new UserCardDto(), null, null, false));
         searchField.setVisible(true);
         currentPane.setText("Contacts");
         invitationsButton.setStyle(null);
@@ -410,14 +439,17 @@ public class ChatController implements Initializable {
         contactsObservableList.clear();
         leftList.setItems(contactsObservableList);
         for (ContactDto contact : ContactList.getList()) {
+            if (contact.getId().equals(MyID.getInstance().getMyId()))
+                continue;
             Pane temp = PaneManager.getPaneManager().putContactCard();
-//            putImageOnPane(contact.getPicture(), temp);
+            putImageOnPane(contact, temp);
             putStatusOnPane(contact.getIsOnlineStatus(), temp);
             putUserNameOnPane(contact.getName(), temp);
-            putPhoneNumOnPane(contact.getPhoneNumber(), temp);
+            putPhoneNumOnPane(contact.getId(), temp);
             putBioOnPane(contact.getBio(), temp);
             putOnlineStatusOnPane(contact.getIsOnlineStatus(), temp);
             contactsObservableList.add(temp);
+
         }
     }
 
@@ -481,8 +513,8 @@ public class ChatController implements Initializable {
             System.out.println("fff");
             Long invitationId = Long.parseLong(((Label) (temp.lookup("#invitId"))).getText());
             JFXButton accept = (JFXButton) (temp.getChildren().get(4));
-            System.out.println(" " +accept.getText() + accept.getId());
-            accept.setOnAction(e->{
+            System.out.println(" " + accept.getText() + accept.getId());
+            accept.setOnAction(e -> {
                 Registry reg = null;
                 System.out.println("Accept invitation" + invitationId);
                 try {
@@ -495,8 +527,8 @@ public class ChatController implements Initializable {
             });
 
             JFXButton decline = (JFXButton) (temp.getChildren().get(5));
-            System.out.println(" " +decline.getText() + decline.getId());
-            decline.setOnAction(e->{
+            System.out.println(" " + decline.getText() + decline.getId());
+            decline.setOnAction(e -> {
                 Registry reg = null;
                 System.out.println("Decline invitation");
                 try {
@@ -517,8 +549,8 @@ public class ChatController implements Initializable {
         leftList.getSelectionModel().selectedItemProperty().addListener(new ChangeListener<Pane>() {
             @Override
             public void changed(ObservableValue<? extends Pane> observable, Pane oldValue, Pane newValue) {
-                if(newValue!=null)
-                    if((currentPane.getText().equals("Invitation"))) {
+                if (newValue != null)
+                    if ((currentPane.getText().equals("Invitations"))) {
                         Long invitationId = Long.parseLong(((Label) (newValue.lookup("#invitId"))).getText());
                         ((JFXButton) (newValue.lookup("#confirInvitation"))).setOnAction(e -> {
                             Registry reg = null;
@@ -542,8 +574,10 @@ public class ChatController implements Initializable {
                             }
                         });
                     }
-    }});
+            }
+        });
     }
+
     @FXML
     private void openNotifications(ActionEvent actionEvent) {
         searchField.setVisible(true);
@@ -557,35 +591,59 @@ public class ChatController implements Initializable {
         notificationCount = 0;
         notificationCountCircle.setVisible(false);
         notificationCountLabel.setVisible(false);
-        createNotificationList();
+        leftList.setItems(notificationObservableList);
+        System.out.println("itemsss:  " + leftList.getItems());
 
     }
 
-    private void createNotificationList() {
-        notificationObservableList.clear();
-        leftList.setItems(notificationObservableList);
-        NotificationQueue.getList().forEach(n -> {
-            Pane temp = PaneManager.getPaneManager().putNotificationPane();
-            ((Label) (temp.lookup("#notificationMessage"))).setText(n.getStatus());
-            ((Label) (temp.lookup("#timestamp"))).setText(n.getCreated_on() + "");
-            notificationObservableList.add(temp);
-        });
+    private void createNotificationList(Long chatId, String timestamp, String senderId) {
+        Pane temp = PaneManager.getPaneManager().putNotificationPane();
+        ChatDto chatDto = ChatList.getList().stream().filter(x -> chatId.equals(x.getId())).toList().get(0);
+
+        if (ChatList.getList().stream().filter(e -> chatId.equals(e.getId())).toList().get(0).getType().equals(Constants.CHAT_GROUP)) {
+            ContactDto contactDto = new ContactDto();
+            contactDto.setImage(chatDto.getImage());
+            contactDto.setImgPath(chatDto.getImgPath());
+            try {
+                Image im = new Image(saveUserImage(contactDto), 230, 27, false, true);
+                ((Circle) (temp.lookup("#userPic"))).setFill(new ImagePattern(im));
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        } else {
+            String imgPath = ContactList.getList().stream().filter(x -> x.getId().equals(senderId)).toList().get(0).getImgPath();
+            byte[] imgArr = ContactList.getList().stream().filter(x -> x.getId().equals(senderId)).toList().get(0).getImage();
+            ContactDto contactDto = new ContactDto();
+            contactDto.setImage(imgArr);
+            contactDto.setImgPath(imgPath);
+            try {
+                Image im = new Image(saveUserImage(contactDto), 230, 27, false, true);
+                ((Circle) (temp.lookup("#userPic"))).setFill(new ImagePattern(im));
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+        ((Label) (temp.lookup("#notificationMessage"))).setText(chatDto.getName() + " Sent You a Message");
+        putTimeOnPane(timestamp, temp);
+
+        notificationObservableList.add(temp);
     }
 
     @FXML
     private void OpenProfile(MouseEvent mouseEvent) {
         currentPane.setText("Profile");
-        chatsButton.setStyle( null);
+        chatsButton.setStyle(null);
         contactsButton.setStyle(null);
         invitationsButton.setStyle(null);
         notificationsButton.setStyle(null);
         searchField.setVisible(false);
         paneObservableList.clear();
         leftList.setId("listOfProfile");
+        ContactDto contact = ContactList.getList().stream().filter(x -> x.getId().equals(MyID.getInstance().getMyId())).toList().get(0);
         Pane temp = PaneManager.getPaneManager().putProfilePane();
-//        putBioOnPane(userSessionDto.getUser().getBio(), temp);
-//        putUserNameOnPane(userSessionDto.getUser().getName(), temp);
-//        putPhoneNumOnPane(userSessionDto.getUser().getId(), temp);
+        putBioOnPane(contact.getBio(), temp);
+        putUserNameOnPane(contact.getName(), temp);
+        putPhoneNumOnPane(contact.getId(), temp);
 //        putIsOnlineStatusOnPane(userSessionDto.getUser().getIsOnlineStatus(), temp);
 //        putImageOnPane(userSessionDto.getUser().getImgPath(), userSessionDto.getUser().getImage(), temp);
         paneObservableList.add(temp);
@@ -596,7 +654,7 @@ public class ChatController implements Initializable {
 
     @FXML
     private void searchOnList(KeyEvent keyEvent) {
-        ObservableList<Pane> c = FXCollections.observableArrayList(paneObservableList.stream().filter(x->((Label)(x.lookup("#userName"))).getText().toLowerCase().contains(searchField.getText().toLowerCase())).collect(Collectors.toList()));
+        ObservableList<Pane> c = FXCollections.observableArrayList(paneObservableList.stream().filter(x -> ((Label) (x.lookup("#userName"))).getText().toLowerCase().contains(searchField.getText().toLowerCase())).collect(Collectors.toList()));
         leftList.setItems(c);
     }
 
@@ -606,52 +664,84 @@ public class ChatController implements Initializable {
     }
 
     private void putTimeOnPane(String time, Pane temp) {
-        ((Label)temp.lookup("#timestamp")).setText(time);
+        ((Label) temp.lookup("#timestamp")).setText(time);
     }
 
     private void putUserNameOnPane(String userName, Pane temp) {
-        ((Label)temp.lookup("#userName")).setText(userName);
+        ((Label) temp.lookup("#userName")).setText(userName);
     }
 
     private void putPhoneNumOnPane(String phone, Pane temp) {
-        ((Label)temp.lookup("#userPhoneNumber")).setText(phone);
+        ((Label) temp.lookup("#userPhoneNumber")).setText(phone);
     }
 
 
     private void putStatusOnPane(String status, Pane temp) {
-        if(status.equals(Constants.ONLINE_STATUS_OFFLINE))
-            ((Circle)(temp.lookup("#statusCircle"))).setFill(Color.RED);
-        else if(status.equals(Constants.ONLINE_STATUS_AVAILABLE))
-            ((Circle)(temp.lookup("#statusCircle"))).setFill(Color.GREEN);
-        else if(status.equals("NA"))
-            ((Circle)(temp.lookup("#statusCircle"))).setRadius(0);
+        if (status.equals(Constants.ONLINE_STATUS_OFFLINE))
+            ((Circle) (temp.lookup("#statusCircle"))).setFill(Color.RED);
+        else if (status.equals(Constants.ONLINE_STATUS_AVAILABLE))
+            ((Circle) (temp.lookup("#statusCircle"))).setFill(Color.GREEN);
+        else if (status.equals("NA"))
+            ((Circle) (temp.lookup("#statusCircle"))).setRadius(0);
     }
 
 
     private void putOnlineStatusOnPane(String status, Pane temp) {
-        if(status.equals(Constants.ONLINE_STATUS_OFFLINE))
-            ((Label)temp.lookup("#onlineStatus")).setText("");
+        if (status.equals(Constants.ONLINE_STATUS_OFFLINE))
+            ((Label) temp.lookup("#onlineStatus")).setText("");
         else
-            ((Label)temp.lookup("#onlineStatus")).setText(status);
+            ((Label) temp.lookup("#onlineStatus")).setText(status);
     }
 
     private void putBioOnPane(String bio, Pane temp) {
-        ((Label)temp.lookup("#bio")).setText(bio);
+        ((Label) temp.lookup("#bio")).setText(bio);
     }
 
-    private  void putImageOnPane(String img, byte [] arr, Pane temp) {
+
+    private Image getImage(Long chatId, String senderId) {
+        ChatDto chatDto = ChatList.getList().stream().filter(x -> chatId.equals(x.getId())).toList().get(0);
+        Image im = null;
+        if (ChatList.getList().stream().filter(e -> chatId.equals(e.getId())).toList().get(0).getType().equals(Constants.CHAT_GROUP)) {
+            ContactDto contactDto = new ContactDto();
+            contactDto.setImage(chatDto.getImage());
+            contactDto.setImgPath(chatDto.getImgPath());
+            try {
+                im = new Image(saveUserImage(contactDto), 230, 27, false, true);
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        } else {
+            String imgPath = ContactList.getList().stream().filter(x -> x.getId().equals(senderId)).toList().get(0).getImgPath();
+            byte[] imgArr = ContactList.getList().stream().filter(x -> x.getId().equals(senderId)).toList().get(0).getImage();
+            ContactDto contactDto = new ContactDto();
+            contactDto.setImage(imgArr);
+            contactDto.setImgPath(imgPath);
+            try {
+                im = new Image(saveUserImage(contactDto), 230, 27, false, true);
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+        return im;
+    }
+
+
+    private void putImageOnPane(ContactDto dto, Pane temp) {         //for contacts
+
         try {
-            ((Circle) temp.lookup("#userPic")).setFill(new ImagePattern(new Image(Constants.byteArrayToImage(arr, img).getPath(),100,100,false,true)));
+            Image im = new Image(saveUserImage(dto), 230, 27, false, true);
+            ((Circle) (temp.lookup("#userPic"))).setFill(new ImagePattern(im));
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
+
     @FXML
     void AddNewContacts(MouseEvent event) {
         Pane temp = PaneManager.getPaneManager().putAddContactCard();
         currentPane.setText("Add Contacts");
         currentPane.setStyle("-fx-font-size: 40; ");
-        chatsButton.setStyle( null);
+        chatsButton.setStyle(null);
         invitationsButton.setStyle(null);
         notificationsButton.setStyle(null);
 
@@ -668,28 +758,31 @@ public class ChatController implements Initializable {
         paneObservableList.add(temp);
         leftList.setItems(paneObservableList);
     }
+
     @FXML
     void deleteContact(MouseEvent event) {
-        if(paneObservableList.size()>1){
-            paneObservableList.remove(paneObservableList.size()-1);
+        if (paneObservableList.size() > 1) {
+            paneObservableList.remove(paneObservableList.size() - 1);
             leftList.setItems(paneObservableList);
         }
 
     }
+
     @FXML
     void addNewContact(MouseEvent event) {
         Pane temp = PaneManager.getPaneManager().putAddContactCard();
         paneObservableList.add(temp);
         leftList.setItems(paneObservableList);
     }
+
     @FXML
     void addContacts(ActionEvent event) {
         leftList.cellFactoryProperty();
-        for (Pane k: paneObservableList) {
+        for (Pane k : paneObservableList) {
             TextField tx = (TextField) k.getChildren().get(1);
             Label label = (Label) k.getChildren().get(2);
-            if(Validation.validatePhoneNumber(tx,label)){
-                new InvitationService().sendInvit(MyID.getInstance().getMyId(),tx.getText());
+            if (Validation.validatePhoneNumber(tx, label)) {
+                new InvitationService().sendInvit(MyID.getInstance().getMyId(), tx.getText());
             }
         }
     }
@@ -705,41 +798,34 @@ public class ChatController implements Initializable {
     }
 
     public void sendMessage(ActionEvent actionEvent) {
-        if(!messageField.getText().trim().isBlank()) {
+        if (!messageField.getText().trim().isBlank()) {
             MessageDto messageDto = new MessageDto();
             messageDto.setMessage(messageField.getText().trim());
             messageDto.setFont(fonts.getSelectionModel().getSelectedItem());
-            messageDto.setBold(true);
+            messageDto.setBold(bold.isSelected());
             messageDto.setItalic(italic.isSelected());
             messageDto.setUnderline(underline.isSelected());
             messageDto.setTextColor("#" + Integer.toHexString(textColor.getValue().hashCode()));
             messageDto.setHighlightColor("#" + Integer.toHexString(highlight.getValue().hashCode()));
-            messageDto.setSenderId(userSessionDto.getUser().getId());
+            messageDto.setSenderId(MyID.getInstance().getMyId());
             messageDto.setFontSize((int) (fontSize.getValue()));
             messageDto.setTimestamp(LocalTime.now().getHour() + ":" + LocalTime.now().getMinute() + "");
             try {
                 SendMessage.send(currentChat, messageDto);
+                messageField.setText("");
+
             } catch (RemoteException e) {
                 e.printStackTrace();
             } catch (NotBoundException e) {
                 e.printStackTrace();
             }
-            messageField.setText("");
-            Animation animation = new Timeline(new KeyFrame(Duration.seconds(0.5), new KeyValue(rightScrollPane.vvalueProperty(), 1)));
-            animation.play();
+
         }
     }
 
 
-
-
-
-
     public void createMessage(MessageDto messageOptions, int chat) {
 
-//        ImageView imageView = new ImageView(image);
-//        imageView.setFitWidth(20);
-//        imageView.setFitHeight(20);
         HBox sentMessage = new HBox();
 
         if (chat == 1) {
@@ -751,22 +837,36 @@ public class ChatController implements Initializable {
         }
 
         chatVBox.getChildren().add(sentMessage);
+        Animation animation = new Timeline(new KeyFrame(Duration.seconds(0.5), new KeyValue(rightScrollPane.vvalueProperty(), 1)));
+        animation.play();
 
     }
 
     private Group createBubble(MessageDto messageOptions, Color bubbleColor) {
 
+
+        FontWeight w;
+        if (messageOptions.isBold()) {
+            w = FontWeight.BOLD;
+//
+        } else {
+            w = FontWeight.NORMAL;
+        }
+
+        FontPosture p;
+        if (messageOptions.isItalic()) {
+            p = FontPosture.ITALIC;
+        } else {
+            p = FontPosture.REGULAR;
+        }
+
+        Font font = Font.font(messageOptions.getFont(), w, p, messageOptions.getFontSize());
+
         Text messageTemp = new Text(messageOptions.getMessage());
         messageTemp.setWrappingWidth(250);
-        messageTemp.setFont(Font.font(messageOptions.getFont(), messageOptions.getFontSize()));
+        messageTemp.setFont(font);
         messageTemp.setUnderline(messageOptions.isUnderline());
-        if (messageOptions.isBold()) {
-            messageTemp.setStyle("-fx-font-weight: bold;");
-        }
-        if (messageOptions.isItalic()) {
-            messageTemp.setStyle("-fx-font-weight: italic;");
 
-        }
         int messageWidth = (int) messageTemp.getLayoutBounds().getWidth();
 //        System.out.println(messageWidth);
         int messageHeight = (int) messageTemp.getLayoutBounds().getHeight();
@@ -805,36 +905,8 @@ public class ChatController implements Initializable {
         Label messageLabel = new Label(messageOptions.getMessage());
         messageLabel.setWrapText(true);
         messageLabel.setMaxWidth(250);
-        messageLabel.setFont(Font.font(messageOptions.getFont(), messageOptions.getFontSize()));
-        messageLabel.setUnderline(messageOptions.isUnderline());
-        FontWeight w;
-        if (messageOptions.isBold()) {
-             w = FontWeight.BOLD;
-//
-        }
-        else {
-          w  = FontWeight.NORMAL;
-        }
-
-        FontPosture p ;
-        if (messageOptions.isItalic()) {
-            p = FontPosture.ITALIC;
-//            messageLabel.setStyle("-fx-font-weight: bold;");
-        }
-        else {
-          p  = FontPosture.REGULAR;
-        }
-
-
-//
-
-        Font font = Font.font(messageOptions.getFont(), w, p, messageOptions.getFontSize());
         messageLabel.setFont(font);
-        if (messageOptions.isItalic()) {
-            messageLabel.setStyle("-fx-font-weight: italic;");
-
-        }
-
+        messageLabel.setUnderline(messageOptions.isUnderline());
         messageLabel.setStyle("-fx-text-fill:" + messageOptions.getTextColor() + ";-fx-background-color:" + messageOptions.getHighlightColor() + ";");
         messageLabel.setTranslateX((bubble.getWidth() - messageWidth) / 2);
         messageLabel.setTranslateY(nameHeight + 7);
@@ -881,7 +953,7 @@ public class ChatController implements Initializable {
         yesButton.setOnAction(e -> {
             try {
                 LogoutService.logout();
-                SceneManager s =SceneManager.getSceneManager();
+                SceneManager s = SceneManager.getSceneManager();
                 s.switchToLoginScene();
             } catch (NotBoundException | RemoteException ex) {
                 ex.printStackTrace();
@@ -922,7 +994,7 @@ public class ChatController implements Initializable {
         fileName.setTranslateY(25);
         hbox.setStyle("-fx-background-color: #e9e1e1; -fx-background-radius: 20; -fx-border-radius:20;");
         try {
-            new FileTransferService().sendFile(currentChat, userSessionDto.getUser().getId(), file);
+            new FileTransferService().sendFile(currentChat, MyID.getInstance().getMyId(), file);
         } catch (RemoteException e) {
             e.printStackTrace();
         }
@@ -935,22 +1007,34 @@ public class ChatController implements Initializable {
         rightAnchorPane.getChildren().add(0, new ImageView(new Image(String.format("/image/%s.gif", (int) (Math.random() * (6)) + 1 + ""), 506, 633, false, false)));
         rightAnchorPane.getChildren().get(0).toFront();
         isChatClosed = true;
+        currentChat = null;
 
 
     }
 
     public void edit(ActionEvent actionEvent) {
-        if(isBarsVisible){
+        if (isBarsVisible) {
             firstButtonBar.setVisible(false);
             secondButtonBar.setVisible(false);
             isBarsVisible = false;
-        }
-        else{
+        } else {
             firstButtonBar.setVisible(true);
             secondButtonBar.setVisible(true);
             isBarsVisible = true;
 
         }
+    }
+
+    public String saveUserImage(ContactDto dto) throws IOException {
+        String path = Constants.USER_IMAGES_DIR + dto.getImgPath();
+        Constants.byteArrayToImage(dto.getImage(), URLDecoder.decode(path, "UTF-8"));
+        return URLDecoder.decode(path, "UTF-8");
+    }
+
+    public String saveUserImage(UserDto dto) throws IOException {
+        String path = Constants.USER_IMAGES_DIR + dto.getImgPath();
+        Constants.byteArrayToImage(dto.getImage(), URLDecoder.decode(path, "UTF-8"));
+        return URLDecoder.decode(path, "UTF-8");
     }
 }
 
